js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromChainCallWithCrossModuleInliner/main/test.kt
fun test(): Int {
    try {
        return makeKlass().foo()
    } catch (e: Error) {
        return 1
    }
}
